--- a/_posts/2017-05-14-demo.markdown
+++ b/_posts/2017-05-14-demo.markdown
@@ -1,9 +1,9 @@
 ---
 layout: project
 title: Demo d'un projet
-date: 2017-04-19
+date: 2017-05-14
 team: Les rejethons
-# Image servant a la grille des projets et en entete du projet si une video youtube n'est pas presente
+# Cette image doit etre deposee dans le repertoire /img/projects de ce site.
 img: rejethons.png
 alt: Demo
 ---
@@ -11,13 +11,32 @@ alt: Demo
 {% include youtube.html vid="E_A4wsvXxLY" %}
 
 # Le concept
-Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.
 
+*de l'italique* et du **gras**
+> Une citation
+
+Des tableaux :
+
+First Header | Second Header
+------------ | -------------
+Content from cell 1 | Content from cell 2
+Content in the first column | Content in the second column
+
+Liste :
+
+* Bulle
+  * Sous bulle 
+
+1. Un
+   1. Sous un
+1. Deux
+
+  
 # La realisation
 Le Lorem Ipsum est simplement du faux texte employé dans la composition et la mise en page avant impression. Le Lorem Ipsum est le faux texte standard de l'imprimerie depuis les années 1500, quand un peintre anonyme assembla ensemble des morceaux de texte pour réaliser un livre spécimen de polices de texte. Il n'a pas fait que survivre cinq siècles, mais s'est aussi adapté à la bureautique informatique, sans que son contenu n'en soit modifié. Il a été popularisé dans les années 1960 grâce à la vente de feuilles Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.
 
-# Pourquoi l'acheter?
+# Tests videos
 
-- Raison #1
-- Raison #2
+Publication des videos sur libcast :
+<iframe class="center-block" src="//rejethons.libcast.com/widget/vid_30870213_112828-mp4" class="libcast_player" width="720" height="720" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
